
2011-04-01 errors and warnings are printed on stderr instead of stdout
