@@ -27,7 +27,7 @@
 <!-- compile sources -->
 <target name="build" depends="gen">
 	<javac debug="true" nowarn="true" srcdir="." includes="**/*.java" excludes="test/**" 
-         classpath=".:${tools}/beaver-rt.jar:${tools}/junit.jar"/>
+         classpath=".:${tools}/beaver-rt.jar:${tools}/junit.jar" includeantruntime="false"/>
 </target>
 	
 <!-- generate compiler source files -->
