@@ -27,11 +27,21 @@
 <!-- compile sources -->
 <target name="build" depends="gen">
 	<javac debug="true" nowarn="true" srcdir="." includes="**/*.java" excludes="*test*/**" 
-         classpath=".:${tools}/beaver-rt.jar:${tools}/junit.jar"/>
+         classpath=".:${tools}/beaver-rt.jar:${tools}/junit.jar" includeantruntime="false"/>
 </target>
 
 <!-- generate compiler source files -->
+<!-- Call Ant again, to run JastAdd with a suffient amount of memory-->
 <target name="gen" depends="scanner,parser">
+	<exec executable="ant" failonerror="true">
+		<env key="ANT_OPTS" value="-Xmx256M"/>
+		<arg value="genWithMoreMemory"/>
+	</exec>
+</target>
+
+<!-- generate compiler source files -->
+<!-- Needs to be called in an environment with more memory than default -->
+<target name="genWithMoreMemory">
   <!-- create AST node types and weave aspect modules -->
   <jastadd package="${package}" rewrite="true" beaver="true" novisitcheck="true" noCacheCycle="true" outdir="${basedir}" refineLegacy="false">
 		<fileset dir="${Java1.4Frontend}">
