@@ -1,3 +1,4 @@
+2011-05-12 Modified build files to use sufficient heap when running JastAdd.
 
 2011-04-01 errors and warnings are printed on stderr instead of stdout
 
